<resources>
    <string name="app_name">Scheduler</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">一覧表示</string>
    <string name="second_fragment_label">カレンダー表示</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="schedule_edit_text">スケジュール編集</string>
    <string name="select_date">日付選択</string>
    <string name="select_time">時間選択</string>
    <string name="save">保存</string>
    <string name="delete">削除</string>
</resources>