<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.scheduler.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_to_scheduleEditFragment"
            app:destination="@id/scheduleEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.scheduler.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_to_scheduleEditFragment"
            app:destination="@id/scheduleEditFragment" />
    </fragment>
    <fragment
        android:id="@+id/scheduleEditFragment"
        android:name="com.example.scheduler.ScheduleEditFragment"
        android:label="@string/schedule_edit_text"
        tools:layout="@layout/fragment_schedule_edit" >
        <argument
            android:name="scheduleId"
            app:argType="long"
            android:defaultValue="-1L" />
    </fragment>
</navigation>